--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "module": "dist/index.es.js",
   "exports": {
     ".": {
-      "types": "./index.d.ts",
+      "types": "./src/types.ts",
       "import": "./dist/index.es.js",
       "require": "./dist/index.umd.js"
     }
   },
-  "types": "index.d.ts",
+  "types": "src/types.ts",
   "scripts": {
     "test": "vitest run",
     "dev": "vite",
@@ -40,35 +40,36 @@
   "homepage": "https://github.com/AnnoDomine/mui-phone-number",
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
+    "@chromatic-com/storybook": "^4.1.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
+    "@storybook/addon-a11y": "^10.1.11",
+    "@storybook/addon-docs": "^10.1.11",
+    "@storybook/addon-onboarding": "^10.1.11",
+    "@storybook/addon-vitest": "^10.1.11",
+    "@storybook/react-vite": "^10.1.11",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/lodash": "^4.17.21",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
     "clsx": "^2.1.1",
     "jsdom": "^27.4.0",
     "less": "^4.1.3",
+    "playwright": "^1.57.0",
     "prop-types": "^15.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "storybook": "^10.1.11",
     "vite": "^7.3.0",
     "vite-plugin-dts": "^3.7.3",
-    "vitest": "^4.0.16",
-    "storybook": "^10.1.11",
-    "@storybook/react-vite": "^10.1.11",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.11",
-    "@storybook/addon-a11y": "^10.1.11",
-    "@storybook/addon-docs": "^10.1.11",
-    "@storybook/addon-onboarding": "^10.1.11",
-    "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.16",
-    "@vitest/coverage-v8": "^4.0.16"
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "country-flag-icons": "^1.5.5",
