--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "storybook": "^10.1.11",
+    "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-dts": "^3.7.3",
     "vitest": "^4.0.16"
