--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mui-phone-number",
   "version": "3.0.3",
+  "type": "module",
   "description": "A material-ui v5+ react component to format phone numbers. Based on react-phone-input-2",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
@@ -20,7 +21,8 @@
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -41,9 +43,17 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
     "@chromatic-com/storybook": "^4.1.3",
+    "@commitlint/cli": "^20.3.0",
+    "@commitlint/config-conventional": "^20.3.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/npm": "^13.1.3",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "^10.1.11",
     "@storybook/addon-onboarding": "^10.1.11",
@@ -60,12 +70,14 @@
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
     "clsx": "^2.1.1",
+    "husky": "^9.1.7",
     "jsdom": "^27.4.0",
     "less": "^4.1.3",
     "playwright": "^1.57.0",
     "prop-types": "^15.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "semantic-release": "^25.0.2",
     "storybook": "^10.1.11",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
