--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,11 +6,11 @@
       {
         "preset": "conventionalcommits",
         "releaseRules": [
-          { "type": "docs", "scope": "README", "release": "patch" },
-          { "type": "refactor", "release": "patch" },
-          { "type": "style", "release": "patch" },
+          { "type": "feat", "release": "minor" },
+          { "type": "fix", "release": "patch" },
           { "type": "ci", "release": "patch" },
           { "type": "test", "release": "patch" },
+          { "type": "docs", "release": "patch" },
           { "type": "dev", "release": "patch" },
           { "type": "major*", "release": "major" }
         ]
@@ -25,11 +25,8 @@
             { "type": "feat", "section": "Features" },
             { "type": "fix", "section": "Bug Fixes" },
             { "type": "docs", "section": "Documentation" },
-            { "type": "style", "section": "Styles" },
-            { "type": "refactor", "section": "Code Refactoring" },
-            { "type": "perf", "section": "Performance Improvements" },
-            { "type": "test", "section": "Tests" },
             { "type": "ci", "section": "CI/CD" },
+            { "type": "test", "section": "Tests" },
             { "type": "dev", "section": "Development" },
             { "type": "major*", "section": "Breaking Changes" }
           ]
